--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-boiler-plate",
+  "name": "omaha-web-frontend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,44 +9,45 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/enzyme": "^3.1.6",
-    "@types/enzyme-adapter-react-16": "^1.0.1",
-    "@types/mocha": "^2.2.45",
+    "@reactivex/rxjs": "^6.2.1",
+    "@types/enzyme": "^3.1.10",
+    "@types/enzyme-adapter-react-16": "^1.0.2",
+    "@types/history": "^4.6.2",
+    "@types/isomorphic-fetch": "0.0.34",
+    "@types/jsdom": "^11.0.5",
+    "@types/mocha": "^5.2.2",
     "@types/power-assert": "^1.5.0",
-    "awesome-typescript-loader": "^3.4.1",
+    "@types/react": "^16.4.0",
+    "@types/react-dom": "^16.0.6",
+    "@types/window-size": "^0.2.4",
+    "awesome-typescript-loader": "^5.1.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "espower-typescript": "^8.1.2",
+    "espower-typescript": "^8.1.3",
     "gulp": "^3.9.1",
-    "gulp-mocha": "^5.0.0",
-    "gulp-plumber": "^1.1.0",
+    "gulp-mocha": "^6.0.0",
+    "gulp-plumber": "^1.2.0",
     "gulp-webserver": "^0.9.1",
-    "mocha": "^4.1.0",
-    "power-assert": "^1.5.0",
+    "mocha": "^5.2.0",
+    "power-assert": "^1.6.0",
     "source-map-loader": "^0.2.3",
-    "typescript": "^2.6.2",
-    "webpack": "^3.10.0",
-    "webpack-stream": "^4.0.0"
+    "typescript": "^2.9.2",
+    "webpack": "^4.12.0",
+    "webpack-stream": "^4.0.3"
   },
   "dependencies": {
-    "@google/maps": "^0.4.5",
-    "@reactivex/rxjs": "^5.5.6",
-    "@types/googlemaps": "^3.30.3",
-    "@types/isomorphic-fetch": "0.0.34",
-    "@types/jsdom": "^11.0.4",
-    "@types/react": "^16.0.31",
-    "@types/react-dom": "^16.0.3",
-    "@types/window-size": "^0.2.4",
     "babel-polyfill": "^6.26.0",
-    "inversify": "^4.9.0",
+    "history": "^4.7.2",
+    "inversify": "^4.13.0",
     "isomorphic-fetch": "^2.2.1",
-    "jsdom": "^11.5.1",
-    "linqts": "^1.10.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.5.6",
-    "whatwg-fetch": "^2.0.3",
+    "jsdom": "^11.11.0",
+    "linqts": "^1.11.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "reflect-metadata": "^0.1.12",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
+    "whatwg-fetch": "^2.0.4",
     "window-size": "^1.1.0"
   }
 }
