--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "module": "commonjs",
         "target": "es6",
         "lib": ["es6","dom"],
+        "moduleResolution": "node",
         "jsx": "react",
         "types": ["reflect-metadata"],
         "experimentalDecorators": true,
