--- a/.gitignore
+++ b/.gitignore
@@ -78,4 +78,7 @@ tests/baselines/reference/dt
 
 # original
 
-dist/
+frontend/dist/
+server/configure-local.json
+server/public/bundle.js
+server/public/bundle.js.map
