--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "webpack-stream": "^4.0.3"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "history": "^4.7.2",
     "inversify": "^4.13.0",
