一つのリポジトリで複数のSPAプロジェクトが持てる仕様に変更

--- a/.gitignore
+++ b/.gitignore
@@ -80,5 +80,4 @@ tests/baselines/reference/dt
 
 frontend/dist/
 server/configure-local.json
-server/public/bundle.js
-server/public/bundle.js.map
+server/js/
