--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "minimist": "^1.2.0",
     "node-fetch": "^2.1.2",
     "request": "^2.87.0"
   },
